ATLAS-2718: Cleanup code