@@ -17,7 +17,6 @@ import ch.sbb.atlas.api.lidi.SublineVersionModelV2;
 import ch.sbb.atlas.api.lidi.enumaration.LineConcessionType;
 import ch.sbb.atlas.api.lidi.enumaration.LineType;
 import ch.sbb.atlas.api.lidi.enumaration.OfferCategory;
-import ch.sbb.atlas.api.lidi.enumaration.PaymentType;
 import ch.sbb.atlas.api.lidi.enumaration.SublineType;
 import ch.sbb.atlas.business.organisation.service.SharedBusinessOrganisationService;
 import ch.sbb.atlas.model.Status;
@@ -66,65 +65,6 @@ class LineControllerInternalApiTest extends BaseControllerApiTest {
     sublineVersionRepository.deleteAll();
     lineVersionRepository.deleteAll();
     lineVersionSnapshotService.deleteAll();
-  }
-
-  @Test
-  void shouldExportFullLineVersionsCsv() throws Exception {
-    //given
-    LineVersionModelV2 lineVersionModel1 = LineTestData.createLineVersionModelBuilder().build();
-    LineVersionModelV2 lineVersionModel2 = LineTestData.createLineVersionModelBuilder()
-        .validFrom(LocalDate.of(2022, 1, 1))
-        .validTo(LocalDate.of(2022, 12, 31))
-        .description("descriptiön2")
-        .build();
-    lineControllerV2.createLineVersionV2(lineVersionModel1);
-    lineControllerV2.createLineVersionV2(lineVersionModel2);
-
-    //when
-    mvc.perform(post("/internal/lines/export-csv/full"))
-        .andExpect(status().isOk()).andReturn();
-  }
-
-  @Test
-  void shouldExportActualLineVersionsCsv() throws Exception {
-    //given
-    LineVersionModelV2 lineVersionModel1 = LineTestData.createLineVersionModelBuilder().build();
-    LineVersionModelV2 lineVersionModel2 = LineTestData.createLineVersionModelBuilder()
-        .validFrom(LocalDate.now()
-            .withMonth(1)
-            .withDayOfMonth(1))
-        .validTo(LocalDate.now()
-            .withMonth(12)
-            .withDayOfMonth(31))
-        .description("desc2")
-        .build();
-    lineControllerV2.createLineVersionV2(lineVersionModel1);
-    lineControllerV2.createLineVersionV2(lineVersionModel2);
-
-    //when
-    mvc.perform(post("/internal/lines/export-csv/actual"))
-        .andExpect(status().isOk()).andReturn();
-  }
-
-  @Test
-  void shouldExportFutureTimetableLineVersionsCsv() throws Exception {
-    //given
-    LineVersionModelV2 lineVersionModel1 = LineTestData.createLineVersionModelBuilder().build();
-    LineVersionModelV2 lineVersionModel2 = LineTestData.createLineVersionModelBuilder()
-        .validFrom(LocalDate.now()
-            .withMonth(1)
-            .withDayOfMonth(1))
-        .validTo(LocalDate.now()
-            .withMonth(12)
-            .withDayOfMonth(31))
-        .description("desc2")
-        .build();
-    lineControllerV2.createLineVersionV2(lineVersionModel1);
-    lineControllerV2.createLineVersionV2(lineVersionModel2);
-
-    //when
-    mvc.perform(post("/internal/lines/export-csv/timetable-year-change"))
-        .andExpect(status().isOk()).andReturn();
   }
 
   @Test
@@ -196,7 +136,6 @@ class LineControllerInternalApiTest extends BaseControllerApiTest {
         .offerCategory(OfferCategory.IC)
         .shortNumber("asd")
         .workflowStatus(WorkflowStatus.STARTED)
-        .paymentType(PaymentType.INTERNATIONAL)
         .number("number")
         .longName("longName")
         .description("description")
@@ -228,8 +167,6 @@ class LineControllerInternalApiTest extends BaseControllerApiTest {
         .andExpect(jsonPath("$.objects", hasSize(1)))
         .andExpect(jsonPath("$.objects.[0]." + LineVersionSnapshotModel.Fields.longName, is("longName")))
         .andExpect(jsonPath("$.objects.[0]." + LineVersionSnapshotModel.Fields.lineType, is(LineType.ORDERLY.toString())))
-        .andExpect(
-            jsonPath("$.objects.[0]." + LineVersionSnapshotModel.Fields.paymentType, is(PaymentType.INTERNATIONAL.toString())))
         .andExpect(jsonPath("$.objects.[0]." + LineVersionSnapshotModel.Fields.description, is("b0.IC2")))
         .andExpect(jsonPath("$.objects.[0]." + LineVersionSnapshotModel.Fields.workflowId, is(123)))
         .andExpect(jsonPath("$.objects.[0]." + LineVersionSnapshotModel.Fields.parentObjectId, is(123)))
@@ -258,7 +195,7 @@ class LineControllerInternalApiTest extends BaseControllerApiTest {
     //then
     List<LineVersionModelV2> lineVersions = lineControllerV2.getLineVersionsV2(lineVersionSaved.getSlnid());
     assertThat(lineVersions).hasSize(1);
-    assertThat(lineVersions.get(0).getStatus()).isEqualTo(Status.VALIDATED);
+    assertThat(lineVersions.getFirst().getStatus()).isEqualTo(Status.VALIDATED);
   }
 
 }
